testování propojenosti VS Code a GitHub

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <a class="enter-btn" href="./collecting/">ENTER <span>&#8594;</span></a>
                 </div>
             </section>
-            <section class="banner">
+            <section class="banner designers">
                 <h2>Designers</h2>
             </section>
-            <section class="banner">
+            <section class="banner manufacturers">
                 <h2>Manufacturers</h2>
             </section>
-            <section class="banner">
+            <section class="banner uses">
                 <h2>Uses</h2>
             </section>
         </div>
