--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SP1 Homepage</title>
         <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/styles.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/homepage.css" />
     </head>
     <body>
         <header>
@@ -22,16 +23,14 @@
                 </ul>
             </nav>
         </header>
-        <div class="content-wrapper">
-            <section class="welcome">
-                <p>Welcome to this page. I will try to explain as much as I can do about poker cards and the community around it.</p>
-            </section>
+        <section class="welcome-section">
+            <p>Welcome to this page. I will try to explain as much as I can do about poker cards and the community around it.</p>
+        </section>
+        <div class="banners-wrapper">
             <section class="banner collecting">
                 <h2>Collecting</h2>
-                <div class="banner-content-wrapper">
-                    <p>Information about playing card collecting. All about where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
-                    <a class="enter-btn" href="./collecting/">ENTER <span>&#8594;</span></a>
-                </div>
+                <p>Information about playing card collecting. All about where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
+                <a class="enter-btn" href="./collecting/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner designers">
                 <h2>Designers</h2>
