--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Explore the world of playing cards!</h1>
+            <h1>Explore the world of playing cards.</h1>
             <img class="suits-img" src="./assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
             <nav>
                 <ul>
@@ -29,17 +29,20 @@
         <div class="banners-wrapper">
             <section class="banner collecting">
                 <h2>Collecting</h2>
-                <p>Information about playing card collecting. All about where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
+                <p>Information about playing card collecting. Where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
                 <a class="enter-btn" href="./collecting/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner designers">
                 <h2>Designers</h2>
+                <a class="enter-btn" href="./designers/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner manufacturers">
                 <h2>Manufacturers</h2>
+                <a class="enter-btn" href="./manufacturers/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner uses">
                 <h2>Uses</h2>
+                <a class="enter-btn" href="./uses/">ENTER <span>&#8594;</span></a>
             </section>
         </div>
         <footer>
