--- a/index.html
+++ b/index.html
@@ -28,20 +28,31 @@
         </section>
         <div class="banners-wrapper">
             <section class="banner collecting">
-                <h2>Collecting</h2>
-                <p>Information about playing card collecting. Where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
+                <div>
+                    <h2>Collecting</h2>
+                    <p>Information about playing card collecting. Where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
+                </div>
                 <a class="enter-btn" href="./collecting/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner designers">
-                <h2>Designers</h2>
+                <div>
+                    <h2>Designers</h2>
+                    <p>There are many people and studios working on custom designs for playing cards. Here are some of the most known designers summarized in short profiles.</p>
+                </div>
                 <a class="enter-btn" href="./designers/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner manufacturers">
-                <h2>Manufacturers</h2>
+                <div>
+                    <h2>Manufacturers</h2>
+                    <p>Two major manufacturers print thousands of decks a day, however, there are several others that are interesting and producing good quality cards. Fancy a single deck with your own custom desing? Options to do that are there!</p>
+                </div>
                 <a class="enter-btn" href="./manufacturers/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner uses">
-                <h2>Uses</h2>
+                <div>
+                    <h2>Uses</h2>
+                    <p>Many ways to use poker sized playing cards exist for all kinds of skill levels. Don't worry, you can learn anything with enough determination and time put into it! Want to try cardistry? Play a card game? Start performing magic tricks? Learn more in this section.</p>
+                </div>
                 <a class="enter-btn" href="./uses/">ENTER <span>&#8594;</span></a>
             </section>
         </div>
