pozadí Designers banneru

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="banner designers">
                 <div>
                     <h2>Designers</h2>
-                    <p>There are many people and studios working on custom designs for playing cards. Here are some of the most known designers summarized in short profiles.</p>
+                    <p>There are many people and studios working on custom designs for playing cards. Here are some of the designers summarized in short profiles with examples of their work.</p>
                 </div>
                 <a class="enter-btn" href="./designers/">ENTER <span>&#8594;</span></a>
             </section>
