úprava headerů stránek

--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <body>
         <header>
             <h1>Explore the world of playing cards.</h1>
-            <img class="suits-img" src="./assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
-            <nav>
-                <ul>
-                    <li><a class="current-page" href="./">Homepage</a></li>
-                    <li><a href="./collecting/">Collecting</a></li>
-                    <li><a href="./designers/">Designers</a></li>
-                    <li><a href="./manufacturers/">Manufacturers</a></li>
-                    <li><a href="./uses/">Uses</a></li>
-                    <li><a href="./about/">About</a></li>
-                </ul>
-            </nav>
+            <div class="header-content-wrapper">
+                <img class="suits-img" src="./assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
+                <nav>
+                    <ul>
+                        <li><a class="current-page" href="./">Homepage</a></li>
+                        <li><a href="./collecting/">Collecting</a></li>
+                        <li><a href="./designers/">Designers</a></li>
+                        <li><a href="./manufacturers/">Manufacturers</a></li>
+                        <li><a href="./uses/">Uses</a></li>
+                        <li><a href="./about/">About</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <section class="welcome-section">
-            <p>Welcome to this page. I will try to explain as much as I can do about poker cards and the community around it.</p>
+            <p>Welcome to this page. I will try to explain as much as I can about poker cards, collecting and the community around it, introduce some of the designers that create them as well as manufacturers that print them. I will not forget to mention how a single deck of poker cards can be used in various ways, so keep on exploring...</p>
         </section>
         <div class="banners-wrapper">
             <section class="banner collecting">
@@ -44,7 +46,7 @@
             <section class="banner manufacturers">
                 <div>
                     <h2>Manufacturers</h2>
-                    <p>Two major manufacturers print thousands of decks a day, however, there are several others that are interesting and producing good quality cards. Fancy a single deck with your own custom desing? Options to do that are there!</p>
+                    <p>Two major manufacturers print thousands of decks a day, however, there are several others that are interesting and producing good quality cards. Fancy a single deck with your own custom design? Options to do that are there!</p>
                 </div>
                 <a class="enter-btn" href="./manufacturers/">ENTER <span>&#8594;</span></a>
             </section>
