--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -9,17 +9,20 @@
     </head>
     <body>
         <header>
-            <h1>Welcome!</h1>
-            <nav>
-                <ul>
-                    <li><a href="../">Homepage</a></li>
-                    <li><a href="../collecting/">Collecting</a></li>
-                    <li><a href="../designers/">Designers</a></li>
-                    <li><a class="current-page" href="./">Manufacturers</a></li>
-                    <li><a href="../uses/">Uses</a></li>
-                    <li><a href="../about/">About</a></li>
-                </ul>
-            </nav>
+            <h1>Manufacturers</h1>
+            <div class="header-content-wrapper">
+                <img class="suits-img" src="../assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
+                <nav>
+                    <ul>
+                        <li><a href="../">Homepage</a></li>
+                        <li><a href="../collecting/">Collecting</a></li>
+                        <li><a href="../designers/">Designers</a></li>
+                        <li><a class="current-page" href="./">Manufacturers</a></li>
+                        <li><a href="../uses/">Uses</a></li>
+                        <li><a href="../about/">About</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <section>
 
