--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>SP1 Homepage</title>
         <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/styles.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/homepage.css" />
+        <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
     </head>
     <body>
         <header>
