--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SP1 About</title>
         <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css" />
+        <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
     </head>
     <body>
         <header>
