rozložení obsahu stránky Designers

--- a/designers/index.html
+++ b/designers/index.html
@@ -25,9 +25,88 @@
                 </nav>
             </div>
         </header>
-        <section>
-
-        </section>
+        <div class="designers-content-wrapper">
+            <section class="designer">
+                <h2>Luke Wadey</h2>
+                <img class="designer-profile-img" src="../assets/img/lukewadey.jpg" alt="profile image of designer Luke Wadey">
+                <div class="description">
+                    <h3>Style</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                    <h3>Designs</h3>
+                    <div class="card-designs">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="designer">
+                <h2>Stockholm17</h2>
+                <img class="designer-profile-img" src="../assets/img/stockholm17.jpg" alt="profile image of designer Stockholm17 (Lorenzo Gaggiotti)">
+                <div class="description">
+                    <h3>Style</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                    <h3>Designs</h3>
+                    <div class="card-designs">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="designer">
+                <h2>Missing New York</h2>
+                <img class="designer-profile-img" src="../assets/img/nathanandleo.jpg" alt="profile image of designers known as Missing New York (Nathan & Leo)">
+                <div class="description">
+                    <h3>Style</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                    <h3>Designs</h3>
+                    <div class="card-designs">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="designer">
+                <h2>Joker &#38; the Thief</h2>
+                <img class="designer-profile-img" src="../assets/img/jamesmilaras.webp" alt="profile image of designer Joker & the Thief (James Milaras)">
+                <div class="description">
+                    <h3>Style</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                    <h3>Designs</h3>
+                    <div class="card-designs">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="designer">
+                <h2>Daniel Schneider</h2>
+                <img class="designer-profile-img" src="../assets/img/danielschneider.jpg" alt="profile image of designer Stockholm17 (Lorenzo Gaggiotti)">
+                <div class="description">
+                    <h3>Style</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
+                    <h3>Designs</h3>
+                    <div class="card-designs">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </section>
+        </div>
         <footer>
 
         </footer>
