přidání obrázků karet k designérům

--- a/designers/index.html
+++ b/designers/index.html
@@ -34,11 +34,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
                     <h3>Designs</h3>
                     <div class="card-designs">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="../assets/img/avh_cards.jpg" alt="">
+                        <img src="../assets/img/monoxchroma_cards.jpg" alt="">
+                        <img src="../assets/img/monoxerochroma_cards.jpg" alt="">
+                        <img src="../assets/img/arwv1_cards.jpg" alt="">
+                        <img src="../assets/img/arwv2_cards.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -50,11 +50,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
                     <h3>Designs</h3>
                     <div class="card-designs">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="../assets/img/blackrequiem_cards.jpg" alt="">
+                        <img src="../assets/img/ravniiii_cards.jpg" alt="">
+                        <img src="../assets/img/eyeoftheoceanlunae_cards.jpg" alt="">
+                        <img src="../assets/img/eyeoftheoceansolis_cards.jpg" alt="">
+                        <img src="../assets/img/notoriousgamblingfrog_cards.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -66,11 +66,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
                     <h3>Designs</h3>
                     <div class="card-designs">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="../assets/img/collage_cards.jpg" alt="">
+                        <img src="../assets/img/article_cards.jpg" alt="">
+                        <img src="../assets/img/gesture_cards.jpg" alt="">
+                        <img src="../assets/img/analog_cards.jpg" alt="">
+                        <img src="../assets/img/pigment_cards.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -82,11 +82,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
                     <h3>Designs</h3>
                     <div class="card-designs">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="../assets/img/jokerandthethief_cards.jpg" alt="">
+                        <img src="../assets/img/happysad_cards.jpg" alt="">
+                        <img src="../assets/img/victory_cards.jpg" alt="">
+                        <img src="../assets/img/seafarers_cards.jpg" alt="">
+                        <img src="../assets/img/fiveninetyseven_cards.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -98,11 +98,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
                     <h3>Designs</h3>
                     <div class="card-designs">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="../assets/img/dondorf_cards.jpg" alt="">
+                        <img src="../assets/img/blackroses_cards.jpg" alt="">
+                        <img src="../assets/img/remedies_cards.jpg" alt="">
+                        <img src="../assets/img/orbitv8_cards.jpg" alt="">
+                        <img src="../assets/img/innocence_cards.jpg" alt="">
                     </div>
                 </div>
             </section>
