přidání footeru + test změny formátu obrázků

--- a/designers/index.html
+++ b/designers/index.html
@@ -67,11 +67,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
                     <h3>Designs</h3>
                     <div class="card-designs">
-                        <img src="../assets/img/collage_cards.jpg" alt="Collage poker card design by Missing New York">
-                        <img src="../assets/img/article_cards.jpg" alt="Article poker card design by Missing New York">
-                        <img src="../assets/img/gesture_cards.jpg" alt="Gesture poker card design by Missing New York">
-                        <img src="../assets/img/analog_cards.jpg" alt="Analog poker card design by Missing New York">
-                        <img src="../assets/img/pigment_cards.jpg" alt="Pigment poker card design by Missing New York">
+                        <img src="../assets/img/collage-playing-cards-by-missing.png" alt="Collage poker card design by Missing New York">
+                        <img src="../assets/img/article-playing-cards-by-missing.png" alt="Article poker card design by Missing New York">
+                        <img src="../assets/img/gesture-playing-cards-by-missing.png" alt="Gesture poker card design by Missing New York">
+                        <img src="../assets/img/analog-playing-cards-by-missing.png" alt="Analog poker card design by Missing New York">
+                        <img src="../assets/img/pigment-playing-cards-by-missing.png" alt="Pigment poker card design by Missing New York">
                     </div>
                 </div>
             </section>
@@ -109,7 +109,7 @@
             </section>
         </div>
         <footer>
-
+            <p>Copyright &#169; 2022 Dominik Fuka</p>
         </footer>
     </body>
 </html>
