rozdělení CSS do obecnějších tříd a úprava obsahu

--- a/collecting/index.html
+++ b/collecting/index.html
@@ -40,7 +40,7 @@
                     <div class="article-content">
                         <h2>Instagram community</h2>
                         <div class="logo-crop">
-                            <img class="logo" src="https://scontent-prg1-1.xx.fbcdn.net/v/t39.8562-6/148701539_3724512380920015_7768163355512350905_n.png?_nc_cat=110&ccb=1-7&_nc_sid=6825c5&_nc_ohc=7oKUsc-8V8sAX_niQXl&_nc_ht=scontent-prg1-1.xx&oh=00_AfBxb3KNPXBQz9lLoJ1ulBX7zr12c-_-yn01J74GLpHHrg&oe=636B170D" alt="Instagram logo">
+                            <img class="logo" src="../assets/img/ig_logo.png" alt="Instagram logo">
                         </div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus, natus laudantium at cum maxime odit quidem unde, veniam molestias tenetur labore architecto alias maiores aliquid molestiae eaque porro praesentium dolore asperiores cumque nostrum? Exercitationem eius explicabo est vitae natus eveniet. Ad culpa labore eaque soluta sapiente eligendi cum dignissimos.</p>
                     </div>
@@ -60,11 +60,15 @@
                 </article>
             </section>
             <section class="portfolio52-section">
-                <h2>Keep track of your collection with Portfolio52!</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
-                </p>
-                <a class="btn" ref="https://portfolio52.com/">Create your portfolio &#8594;</a>
+                <article>
+                    <div class="article-content black-transparent-bg pad-15 round-corners">
+                        <h2>Keep track of your collection with Portfolio52!</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
+                        </p>
+                    </div>
+                    <a class="btn" ref="https://portfolio52.com/">Create your portfolio &#8594;</a>
+                </article>
             </section>
         </div>
         <footer>
