--- a/collecting/index.html
+++ b/collecting/index.html
@@ -29,14 +29,14 @@
         <div class="collecting-content-wrapper pad-20">
             <section class="intro pad-20 round-corners">
                 <div class="black-transparent-bg round-corners">
-                    <h2 class="white-underline">Want to start your collection?</h2>
+                    <h2 class="darkgray-underline">Want to start your collection?</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vel, recusandae ea dignissimos ipsum animi repudiandae accusantium consequatur labore. Aut perferendis rem hic! Commodi tenetur odio porro! Ut magnam architecto at aperiam vel consequuntur iste. In animi, veritatis expedita, quia non ad ipsum fugiat soluta excepturi cumque qui id voluptate facilis possimus dolor nostrum optio omnis itaque repudiandae perferendis doloribus enim eaque nam molestias! Sit in voluptatibus deserunt non dicta.
                     </p>
                 </div>
             </section>
             <section class="community-section">
-                <article class="black-transparent-bg pad-20 round-corners">
+                <article class="black-semitransparent-bg pad-20 round-corners">
                     <div class="article-content">
                         <h2>Instagram community</h2>
                         <div class="logo-crop">
@@ -46,7 +46,7 @@
                     </div>
                     <a class="btn" ref="https://www.instagram.com/explore/tags/playingcards/">Explore #playingcards &#8594;</a>
                 </article>
-                <article class="black-transparent-bg pad-20 round-corners">
+                <article class="black-semitransparent-bg pad-20 round-corners">
                     <div class="article-content">
                         <h2>United Cardists forum</h2>
                         <div class="logo-crop">
@@ -61,8 +61,8 @@
             </section>
             <section class="portfolio52-section pad-20 round-corners">
                 <article>
-                    <div class="article-content black-transparent-bg round-corners">
-                        <h2 class="white-underline">Keep track of your collection with Portfolio52!</h2>
+                    <div class="black-transparent-bg round-corners">
+                        <h2 class="darkgray-underline">Keep track of your collection with Portfolio52!</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
                         </p>
