sjednocení vzhledu tlačítek

--- a/about/index.html
+++ b/about/index.html
@@ -15,12 +15,12 @@
                 <img class="suits-img" src="../assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
                 <nav>
                     <ul>
-                        <li><a href="../">Homepage</a></li>
-                        <li><a href="../collecting/">Collecting</a></li>
-                        <li><a href="../designers/">Designers</a></li>
-                        <li><a href="../manufacturers/">Manufacturers</a></li>
-                        <li><a href="../uses/">Uses</a></li>
-                        <li><a class="current-page" href="./">About</a></li>
+                        <li><a class="btn btn-nav" href="../">Homepage</a></li>
+                        <li><a class="btn btn-nav" href="../collecting/">Collecting</a></li>
+                        <li><a class="btn btn-nav" href="../designers/">Designers</a></li>
+                        <li><a class="btn btn-nav" href="../manufacturers/">Manufacturers</a></li>
+                        <li><a class="btn btn-nav" href="../uses/">Uses</a></li>
+                        <li><a class="btn btn-nav btn-current-page" href="./">About</a></li>
                     </ul>
                 </nav>
             </div>
