--- a/collecting/index.html
+++ b/collecting/index.html
@@ -16,12 +16,12 @@
                 <img class="suits-img" src="../assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
                 <nav>
                     <ul>
-                        <li><a href="../">Homepage</a></li>
-                        <li><a class="current-page" href="./">Collecting</a></li>
-                        <li><a href="../designers/">Designers</a></li>
-                        <li><a href="../manufacturers/">Manufacturers</a></li>
-                        <li><a href="../uses/">Uses</a></li>
-                        <li><a href="../about/">About</a></li>
+                        <li><a class="btn btn-nav" href="../">Homepage</a></li>
+                        <li><a class="btn btn-nav btn-current-page" href="./">Collecting</a></li>
+                        <li><a class="btn btn-nav" href="../designers/">Designers</a></li>
+                        <li><a class="btn btn-nav" href="../manufacturers/">Manufacturers</a></li>
+                        <li><a class="btn btn-nav" href="../uses/">Uses</a></li>
+                        <li><a class="btn btn-nav" href="../about/">About</a></li>
                     </ul>
                 </nav>
             </div>
@@ -44,7 +44,7 @@
                         </div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus, natus laudantium at cum maxime odit quidem unde, veniam molestias tenetur labore architecto alias maiores aliquid molestiae eaque porro praesentium dolore asperiores cumque nostrum? Exercitationem eius explicabo est vitae natus eveniet. Ad culpa labore eaque soluta sapiente eligendi cum dignissimos.</p>
                     </div>
-                    <a class="btn" ref="https://www.instagram.com/explore/tags/playingcards/">Explore #playingcards &#8594;</a>
+                    <a class="btn btn-centered" ref="https://www.instagram.com/explore/tags/playingcards/">Explore #playingcards &#8594;</a>
                 </article>
                 <article class="black-semitransparent-bg pad-20 round-corners">
                     <div class="article-content">
@@ -56,7 +56,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corrupti consequuntur ullam, dolorum minima sint alias voluptatem aliquid obcaecati doloribus amet totam vitae tempore unde a facere dignissimos corporis voluptatibus, deleniti cumque laudantium. Repudiandae, totam, possimus provident ratione consectetur asperiores, quidem exercitationem dignissimos error laboriosam assumenda eius quas voluptas itaque. Fugiat nulla quisquam debitis commodi temporibus inventore nesciunt quod unde reiciendis obcaecati delectus, fugit repellendus voluptas at beatae quas placeat facere tempore ducimus, autem adipisci numquam illum, magni incidunt. Odit.
                         </p>
                     </div>
-                    <a class="btn" ref="https://unitedcardists.com/">Visit the forum &#8594;</a>
+                    <a class="btn btn-centered" ref="https://unitedcardists.com/">Visit the forum &#8594;</a>
                 </article>
             </section>
             <section class="portfolio52-section pad-20 round-corners">
@@ -67,7 +67,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
                         </p>
                     </div>
-                    <a class="btn" ref="https://portfolio52.com/">Create your portfolio &#8594;</a>
+                    <a class="btn btn-centered" ref="https://portfolio52.com/">Create your portfolio &#8594;</a>
                 </article>
             </section>
         </div>
