--- a/designers/index.html
+++ b/designers/index.html
@@ -16,12 +16,12 @@
                 <img class="suits-img" src="../assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
                 <nav>
                     <ul>
-                        <li><a href="../">Homepage</a></li>
-                        <li><a href="../collecting/">Collecting</a></li>
-                        <li><a class="current-page" href="./">Designers</a></li>
-                        <li><a href="../manufacturers/">Manufacturers</a></li>
-                        <li><a href="../uses/">Uses</a></li>
-                        <li><a href="../about/">About</a></li>
+                        <li><a class="btn btn-nav" href="../">Homepage</a></li>
+                        <li><a class="btn btn-nav" href="../collecting/">Collecting</a></li>
+                        <li><a class="btn btn-nav btn-current-page" href="./">Designers</a></li>
+                        <li><a class="btn btn-nav" href="../manufacturers/">Manufacturers</a></li>
+                        <li><a class="btn btn-nav" href="../uses/">Uses</a></li>
+                        <li><a class="btn btn-nav" href="../about/">About</a></li>
                     </ul>
                 </nav>
             </div>
