--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <img class="suits-img" src="./assets/img/suits.png" alt="playing card suits - spade, diamond, club, and heart">
                 <nav>
                     <ul>
-                        <li><a class="current-page" href="./">Homepage</a></li>
-                        <li><a href="./collecting/">Collecting</a></li>
-                        <li><a href="./designers/">Designers</a></li>
-                        <li><a href="./manufacturers/">Manufacturers</a></li>
-                        <li><a href="./uses/">Uses</a></li>
-                        <li><a href="./about/">About</a></li>
+                        <li><a class="btn btn-nav btn-current-page" href="./">Homepage</a></li>
+                        <li><a class="btn btn-nav" href="./collecting/">Collecting</a></li>
+                        <li><a class="btn btn-nav" href="./designers/">Designers</a></li>
+                        <li><a class="btn btn-nav" href="./manufacturers/">Manufacturers</a></li>
+                        <li><a class="btn btn-nav" href="./uses/">Uses</a></li>
+                        <li><a class="btn btn-nav" href="./about/">About</a></li>
                     </ul>
                 </nav>
             </div>
@@ -35,28 +35,28 @@
                     <h2>Collecting</h2>
                     <p>Information about playing card collecting. Where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
                 </div>
-                <a class="enter-btn" href="./collecting/">ENTER <span>&#8594;</span></a>
+                <a class="btn btn-centered" href="./collecting/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner designers">
                 <div>
                     <h2>Designers</h2>
                     <p>There are many people and studios working on custom designs for playing cards. Here are some of the designers summarized in short profiles with examples of their work.</p>
                 </div>
-                <a class="enter-btn" href="./designers/">ENTER <span>&#8594;</span></a>
+                <a class="btn btn-centered" href="./designers/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner manufacturers">
                 <div>
                     <h2>Manufacturers</h2>
                     <p>Two major manufacturers print thousands of decks a day, however, there are several others that are interesting and producing good quality cards. Fancy a single deck with your own custom design? Options to do that are there!</p>
                 </div>
-                <a class="enter-btn" href="./manufacturers/">ENTER <span>&#8594;</span></a>
+                <a class="btn btn-centered" href="./manufacturers/">ENTER <span>&#8594;</span></a>
             </section>
             <section class="banner uses">
                 <div>
                     <h2>Uses</h2>
                     <p>Many ways to use poker sized playing cards exist for all kinds of skill levels. Don't worry, you can learn anything with enough determination and time put into it! Want to try cardistry? Play a card game? Start performing magic tricks? Learn more in this section.</p>
                 </div>
-                <a class="enter-btn" href="./uses/">ENTER <span>&#8594;</span></a>
+                <a class="btn btn-centered" href="./uses/">ENTER <span>&#8594;</span></a>
             </section>
         </div>
         <footer>
